add: css blog page

--- a/src/pages/Blog/Blog.module.scss
+++ b/src/pages/Blog/Blog.module.scss
@@ -6,7 +6,7 @@
 
     & .section_intro {
         display: flex;
-        gap: 30px;
+        gap: 100px;
         align-items: center;
         margin-bottom: 40px;
 
@@ -18,21 +18,22 @@
         & .intro_content {
             flex: 1;
             min-width: 300px;
+            align-items: center;
 
             & .intro_title {
                 font-size: 27px;
                 font-weight: bold;
-                margin-bottom: 10px;
+                margin-bottom: 50px;
             }
 
             & .intro_description {
                 font-size: 16px;
                 line-height: 1.6;
-                margin-bottom: 15px;              
+                margin-bottom: 50px;              
             }
 
             & .btn_seemore {
-                background-color: #EE6983;
+                background-color: #ff7ea0;
                 color: white;
                 border: none;
                 padding: 10px 20px;
@@ -40,12 +41,237 @@
                 width: 200px;
                 cursor: pointer;
                 transition: background 0.3s;
+                display: block;
+                margin: 0 auto;
+
+                &:hover {
+                    background-color: #e6658a;
+                }
             }
         }
 
     }
 
     & .section_categories {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 16px;
+        margin-bottom: 40px;
+        justify-content: space-between;
 
+        & .category_card {
+            position: relative;
+            width: 23%;
+            aspect-ratio: 1.25; 
+            background-size: cover;
+            background-position: center;
+            border-top-left-radius: 12px;
+            border-top-right-radius: 12px;
+            overflow: hidden;
+            cursor: pointer;
+            transition: transform 0.3s;
+
+            & .category_label {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                color: #fff;
+                font-size: 18px;
+                font-weight: 600;
+                z-index: 3;
+                text-align: center;
+                white-space: nowrap;
+                text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+            }
+
+            & .category_bottom_line_1 {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                height: 10px;
+                width: 100%;
+                background: #D9EDF8;
+                z-index: 2;
+            }
+
+            & .category_bottom_line_2 {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                height: 10px;
+                width: 100%;
+                background: #DEDAF4;
+                z-index: 2;
+            }
+
+            & .category_bottom_line_3 {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                height: 10px;
+                width: 100%;
+                background: #E4F1EE;
+                z-index: 2;
+            }
+
+            & .category_bottom_line_4 {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                height: 10px;
+                width: 100%;
+                background: #FFE8FF;
+                z-index: 2;
+            }
+
+            &:hover {
+                transform: scale(1.03);
+              }
+
+              &::before {
+                content: "";
+                position: absolute;
+                inset: 0;
+                background: rgba(0, 0, 0, 0.35);
+                z-index: 1;
+              }
+        }
+
+    }
+
+    & .section_lastest_posts {
+        padding: 2rem 0;
+
+        & .section_header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 1.5rem;
+
+            & h3 {
+                color: #e60000;
+                font-size: 20px;
+                font-weight: bold;
+            }
+
+            & .btn_seeall {
+                background-color: #ff7ea0;
+                color: #fff;
+                font-size: 12px;
+                font-weight: bold;
+                padding: 0.6rem 1.2rem;
+                border-radius: 20px;
+                text-decoration: none;
+                transition: background-color 0.3s ease;
+
+                &::after {
+                    content: "›";
+                    margin-left: 6px;
+                    font-size: 14px;
+                  }
+            
+                &:hover {
+                    background-color: #e6658a;
+                }
+            } 
+        }
+
+        & .post_list {
+            display: flex;
+            gap: 2rem;
+            justify-content: flex-start;
+
+            & .post_item {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 20px;
+                width: fit-content;
+
+                & img {
+                    width: 120px;
+                    height: 120px;
+                    border-radius: 12px;
+                    object-fit: cover;
+                    flex-shrink: 0;
+                    cursor: pointer;
+                }
+
+                & .post_info {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+
+                    & .category {
+                        font-size: 14px;
+                        font-weight: 500;
+                        color: #EE6983;
+                    }
+    
+                    & .title {
+                        font-size: 14px;
+                        font-weight: 400;
+                        color: #333;
+                        line-height: 1.4;
+                        max-height: 2.8em;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        cursor: pointer;
+                    }
+    
+                    & .date {
+                        display: flex;
+                        align-items: center;
+                        font-size: 12px;
+                        color: #666;
+    
+                        & img {
+                            width: 14px;
+                            height: 14px;
+                            margin-right: 6px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    & .section_blog_foryou {
+        padding: 2rem 0;
+
+        & .section_header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 1.5rem;
+
+            & h3 {
+                color: #e60000;
+                font-size: 20px;
+                font-weight: bold;
+            }
+
+            & .btn_seeall {
+                background-color: #ff7ea0;
+                color: #fff;
+                font-size: 12px;
+                font-weight: bold;
+                padding: 0.6rem 1.2rem;
+                border-radius: 20px;
+                text-decoration: none;
+                transition: background-color 0.3s ease;
+
+                &::after {
+                    content: "›";
+                    margin-left: 6px;
+                    font-size: 14px;
+                  }
+            
+                &:hover {
+                    background-color: #e6658a;
+                }
+            } 
+        }
     }
 }
