--- a/src/pages/AboutUs/AboutUs.module.scss
+++ b/src/pages/AboutUs/AboutUs.module.scss
@@ -97,6 +97,7 @@
                 font-weight: 600;
                 display: inline-block;
                 font-size: 16px;
+                cursor: default;
             }
         }
 
