--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -173,6 +173,8 @@
         font-family: 'Inter', sans-serif;
       }
     }
+
+
   }
 
   & .cart_right {
@@ -294,6 +296,60 @@
 
     &:hover {
         background-color: #ec407a;
+    }
+  }
+}
+
+
+.product_list {
+  padding: 0 10%;
+  margin-bottom: 5%;
+
+  & .title {
+    color: #d0021b;
+    font-size: 14px;
+    margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    cursor: pointer;
+
+    & .icon {
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  }
+
+  & .product_items {
+    display: flex;
+    flex-wrap: nowrap;   
+    overflow-x: auto;          
+    gap: 16px;                
+    padding-bottom: 8px;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    & .product_item {
+      border: 1px solid #fbcdd0;
+      padding: 8px;
+      border-radius: 4px;
+      flex: 0 0 auto;       
+      width: 120px;
+      height: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #fff;
+      cursor: pointer;
+
+      & img {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
+      }
     }
   }
 }
