--- a/src/components/MyProfile/MyProfile.module.scss
+++ b/src/components/MyProfile/MyProfile.module.scss
@@ -2,8 +2,9 @@
   background: #fff;
   padding: 16px;
   border-radius: 16px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.08);
   margin-bottom: 24px;
+  height: fit-content;
 
   & h2 {
     font-size: 20px;
