--- a/src/components/NavLeft/NavLeft.module.scss
+++ b/src/components/NavLeft/NavLeft.module.scss
@@ -51,7 +51,7 @@
     background: #fff;
     padding: 16px;
     border-radius: 16px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.08);
     margin-bottom: 24px;
 
     h4 {
@@ -95,7 +95,7 @@
         padding: 12px 16px;
         border-radius: 16px;
         border: none;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+        box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.08);
         font-size: 14px;
         color: #333;
         cursor: pointer;
