--- a/src/components/MyProfile/MyProfile.module.scss
+++ b/src/components/MyProfile/MyProfile.module.scss
@@ -1,6 +1,6 @@
 .profileInfo {
   background: #fff;
-  padding: 16px;
+  padding: 1.5rem;
   border-radius: 16px;
   box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.08);
   margin-bottom: 24px;
