--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -53,6 +53,10 @@
                         padding-left: 0.4rem;
                         color: #666666;
                     }
+                    
+                    &:hover {
+                        cursor: pointer;
+                    }
                 }
             }
 
