--- a/src/components/Address/Address.module.scss
+++ b/src/components/Address/Address.module.scss
@@ -1,18 +1,18 @@
 .addressContainer {
     background-color: #ffffff;
-    border-radius: 0.16px;
+    border-radius: 16px;
     padding: 1.5rem;
     width: 100%;
     max-width: 48rem;
     margin: 0;
     box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.08);
     margin-bottom: 24px;
+    height: fit-content;
 
   & .title {
-        font-size: 1.5rem;
-        font-weight: 700;
         color: #4E4663;
-        margin-bottom: 0.5rem;
+        font-weight: 600;
+        margin-bottom: 0;
     }
 
     & .subtitle {
