add: wishlist component

--- a/src/components/ChangePassword/ChangePassword.module.scss
+++ b/src/components/ChangePassword/ChangePassword.module.scss
@@ -8,41 +8,41 @@
   margin-bottom: 24px;
   height: fit-content;
 
-  h2 {
+  & h2 {
     color: #4E4663;
     font-weight: 600;
     margin-bottom: 0;
   }
 
-  p {
+  & p {
     color: #5C5570;
     font-size: 14px;
   }
 
-  hr {
+  & hr {
     margin: 20px 0;
     border: 0;
     border-top: 1px solid #ddd;
   }
 
-  .form_group {
+  & .form_group {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
 
-    label {
+    & label {
       flex: 0 0 180px;
       color: #4E4663;
       font-weight: 500;
       font-size: 14px;
     }
 
-    .username {
+    & .username {
       color: #555;
       font-size: 14px;
     }
 
-    input {
+    & input {
       flex: 1;
       padding: 10px 20px;
       border: 1px solid #ddd;
@@ -58,11 +58,11 @@
     }
   }
 
-  .actions {
+  & .actions {
     display: flex;
     justify-content: flex-end;
 
-    button {
+    & button {
       background: #EE6983;
       color: #fff;
       border: none;
