--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -225,6 +225,11 @@
   justify-content: space-between;
   cursor: pointer;
   transition: color 0.2s;
+  
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 .menu_col_item span {
   color: #bbb;
