--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -98,6 +98,7 @@
                     height: 3rem;
                     object-fit: cover;
                     cursor: pointer;
+                    text-decoration: none;
                 
                     & .button {
                         background-color: rgb(215, 129, 131);
