--- a/src/components/AuthForm/AuthForm.module.scss
+++ b/src/components/AuthForm/AuthForm.module.scss
@@ -75,6 +75,11 @@
                                 inset -3px -3px 6px rgba(255, 255, 255, 0.7);        
                 }
 
+                & .error {
+                  color: red;
+                  text-align: left;
+                }
+
                 & .passwordWrapper {
                     position: relative;
                 
