--- a/src/pages/BeautyTools/BeautyTools.module.scss
+++ b/src/pages/BeautyTools/BeautyTools.module.scss
@@ -1,3 +1,7 @@
+.breadcrumb {
+    margin: 40px 0;
+  }
+
 .beautytools_container {
   width: 100%;
   margin: 0 auto;
@@ -5,16 +9,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
 }
 
-.breadcrumb {
-  max-width: 900px;
-  width: 100%;
-  margin: 0 auto 32px auto;
-  color: #999;
-  font-size: 14px;
-  text-align: left;
-}
+// .breadcrumb {
+//   max-width: 900px;
+//   width: 100%;
+//   margin: 0 auto 32px auto;
+//   color: #999;
+//   font-size: 14px;
+//   text-align: left;
+// }
 
 .breadcrumb .active {
   color: #EE6983;
