--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -241,6 +241,8 @@
   display: flex;
   justify-content: space-between;
   gap: 16px;
+  
+  
 }
 
 .product-card {
@@ -250,6 +252,12 @@
   width: calc(20% - 13px); /* 5 cards with equal spacing */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
+  cursor: pointer;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
   
   &:hover {
     transform: translateY(-5px);
