--- a/src/components/MyOrder/MyOrder.module.scss
+++ b/src/components/MyOrder/MyOrder.module.scss
@@ -50,6 +50,7 @@
     padding: 20px;
     box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.08);
     min-width: 1000px;
+    margin-bottom: 5%;
 
     .order_header {
       display: flex;
@@ -98,6 +99,7 @@
         }
 
         .name_and_weight {
+            width: -webkit-fill-available;
 
             .name {
             font-weight: 500;
