--- a/src/components/Address/Address.module.scss
+++ b/src/components/Address/Address.module.scss
@@ -55,9 +55,15 @@
             }
         }
 
+        .ctn_district_ward {
+            display: flex;
+            gap: 10px;
+        }
+
         & .dropdownContainer {
             position: relative;
             margin-bottom: 0.5rem;
+            flex: 1;
 
             & .dropdownField {
                 width: 100%;
@@ -223,6 +229,17 @@
     }
 }
 
+.inputField:disabled {
+  background-color: #f5f5f5;
+  color: #888;
+  cursor: not-allowed;
+}
+
+.noteText {
+  margin-top: 4px;
+  font-size: 13px;
+  color: #dc3545;
+}
 
 
 
