--- a/src/components/NavLeft/NavLeft.module.scss
+++ b/src/components/NavLeft/NavLeft.module.scss
@@ -20,11 +20,13 @@
       position: relative;
 
       img {
-        width: 36px;
-        height: 36px;
-        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 50%;
       }
     }
+
 
     .info {
       display: flex;
@@ -40,7 +42,7 @@
 
       .status {
         font-size: 13px;
-        color: #999;
+        color: rgb(0, 255, 0);
         margin-top: 4px;
       }
     }
