--- a/src/components/Wishlist/Wishlist.module.scss
+++ b/src/components/Wishlist/Wishlist.module.scss
@@ -135,6 +135,18 @@
                         font-weight: 400;
                     }
                 }
+
+                & .actions {
+                    display: flex;
+                    justify-content: space-between;
+                    & span {
+                        font-size: 12px;
+                        color: #999;
+                        margin-right: 5%;
+                        text-decoration: underline;
+                        cursor: pointer;
+                    }
+                }
             }
         }
 
